compiler/toc-hir-lowering/tests/snapshots/lowering__intro_import_defs_subprogram-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var *p_def : int\n    proc _\n        import p_def\n    end _"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..63): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..63): []
        StmtItem@(FileId(1), 5..21): ItemId(0)
          ConstVar@(FileId(1), 5..21): var "p_def"@(FileId(1), 10..15)
            Primitive@(FileId(1), 18..21): Int
        StmtItem@(FileId(1), 26..63): ItemId(2)
          Subprogram@(FileId(1), 26..63): "_"@(FileId(1), 31..32)
            Void@(FileId(1), 26..32)
            Import@(FileId(1), 48..53): SameAsItem local("p_def"@(FileId(1), 10..15))
            StmtBody@(FileId(1), 58..58): []
error in file FileId(1) at 48..53: `p_def` is already imported in this scope
| note in file FileId(1) for 10..15: `p_def` declared pervasive here
| error in file FileId(1) for 48..53: `p_def` re-imported here
| info: `p_def` was declared pervasively, so it's already imported

