compiler/toc-hir-lowering/tests/snapshots/lowering__intro_import_defs_subprogram.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    proc _\n        import nothing\n    end _"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..44): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..44): []
        StmtItem@(FileId(1), 5..44): ItemId(1)
          Subprogram@(FileId(1), 5..44): "_"@(FileId(1), 10..11)
            Void@(FileId(1), 5..11)
            Import@(FileId(1), 27..34): SameAsItem unresolved
            StmtBody@(FileId(1), 39..39): []
error at (FileId(1), 27..34): `nothing` could not be imported
| error for (FileId(1), 27..34): no definitions of `nothing` found in the surrounding scope

