compiler/toc-hir-lowering/tests/snapshots/lowering__item_gathering.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var a, b, c := 0\n    const d := 1\n"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(4)
    Module@(FileId(1), 0..39): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..38): []
        StmtItem@(FileId(1), 5..21): ItemId(0)
          ConstVar@(FileId(1), 5..21): var "a"@(FileId(1), 9..10)
            ExprBody@(FileId(1), 20..21)
              Literal@(FileId(1), 20..21): Integer(0)
        StmtItem@(FileId(1), 5..21): ItemId(1)
          ConstVar@(FileId(1), 5..21): var "b"@(FileId(1), 12..13)
            ExprBody@(FileId(1), 20..21)
              Literal@(FileId(1), 20..21): Integer(0)
        StmtItem@(FileId(1), 5..21): ItemId(2)
          ConstVar@(FileId(1), 5..21): var "c"@(FileId(1), 15..16)
            ExprBody@(FileId(1), 20..21)
              Literal@(FileId(1), 20..21): Integer(0)
        StmtItem@(FileId(1), 26..38): ItemId(3)
          ConstVar@(FileId(1), 26..38): const "d"@(FileId(1), 32..33)
            ExprBody@(FileId(1), 37..38)
              Literal@(FileId(1), 37..38): Integer(1)

