compiler/toc-hir-lowering/tests/snapshots/lowering__lower_all_expr-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ := all"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..12): "<root>"@(dummy)
      StmtBody@(src/main.t:0..12): []
        StmtItem@(src/main.t:0..12): ItemId(0)
          ConstVar@(src/main.t:0..12): var "_"@(src/main.t:4..5)
error at src/main.t:9..12: unexpected token
| error for src/main.t:9..12: expected expression, but found `all`
