compiler/toc-hir-lowering/tests/snapshots/lowering__lower_all_expr.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "proc call end call var _ := call(all)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(2)
    Module@(src/main.t:0..37): "<root>"@(dummy)
      StmtBody@(src/main.t:0..37): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          Subprogram@(src/main.t:0..18): "call"@(src/main.t:5..9)
            Void@(src/main.t:0..9)
            StmtBody@(src/main.t:10..10): []
        StmtItem@(src/main.t:19..37): ItemId(1)
          ConstVar@(src/main.t:19..37): var "_"@(src/main.t:23..24)
            ExprBody@(src/main.t:28..37)
              CallExpr@(src/main.t:28..37): [...]
                Name@(src/main.t:28..32): "call"@(src/main.t:5..9)
                All@(src/main.t:33..36)
