compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : array char, boolean, 1..2 of int"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..41): "<root>"@(dummy)
      StmtBody@(src/main.t:0..41): []
        StmtItem@(src/main.t:0..41): ItemId(0)
          Type@(src/main.t:0..41): "_"@(src/main.t:5..6)
            Array@(src/main.t:9..41): Static
              Primitive@(src/main.t:15..19): Char
              Primitive@(src/main.t:21..28): Boolean
              Constrained@(src/main.t:30..34): end => Expr
                ExprBody@(src/main.t:30..31)
                  Literal@(src/main.t:30..31): Integer(1)
                ExprBody@(src/main.t:33..34)
                  Literal@(src/main.t:33..34): Integer(2)
              Primitive@(src/main.t:38..41): Int
