compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : array of int"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..21): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..21): []
        StmtItem@(FileId(1), 0..21): ItemId(0)
          Type@(FileId(1), 0..21): "_"@(FileId(1), 5..6)
            Array@(FileId(1), 9..21): Static
              Primitive@(FileId(1), 18..21): Int
error at (FileId(1), 15..17): unexpected token
| error for (FileId(1), 15..17): expected type specifier, but found `of`

