compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ : flexible array 1 .. 0 of int"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..36): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..36): []
        StmtItem@(FileId(1), 0..36): ItemId(0)
          ConstVar@(FileId(1), 0..36): var "_"@(FileId(1), 4..5)
            Array@(FileId(1), 8..36): Flexible
              Constrained@(FileId(1), 23..29): end => Expr
                ExprBody@(FileId(1), 23..24)
                  Literal@(FileId(1), 23..24): Integer(1)
                ExprBody@(FileId(1), 28..29)
                  Literal@(FileId(1), 28..29): Integer(0)
              Primitive@(FileId(1), 33..36): Int

