compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_any_sized-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : proc uwu(_ : array 1 .. *, 1 .. * of int)"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..50): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..50): []
        StmtItem@(FileId(1), 0..50): ItemId(0)
          Type@(FileId(1), 0..50): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..50): [...]
              Array@(FileId(1), 22..49): Static
                Constrained@(FileId(1), 28..34): end => Any
                  ExprBody@(FileId(1), 28..29)
                    Literal@(FileId(1), 28..29): Integer(1)
                Primitive@(FileId(1), 46..49): Int
              Void@(FileId(1), 9..50)
error at (FileId(1), 28..34): extra ranges specified
| error for (FileId(1), 36..42): extra ranges after
| note for (FileId(1), 28..34): this must be the only range present
| info: any-sized arrays must have this range be the only range present

