compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_any_sized-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : proc uwu(_ : array 1 .. *, char of int)"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..48): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..48): []
        StmtItem@(FileId(1), 0..48): ItemId(0)
          Type@(FileId(1), 0..48): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..48): [...]
              Array@(FileId(1), 22..47): Static
                Constrained@(FileId(1), 28..34): end => Any
                  ExprBody@(FileId(1), 28..29)
                    Literal@(FileId(1), 28..29): Integer(1)
                Primitive@(FileId(1), 44..47): Int
              Void@(FileId(1), 9..48)
error at (FileId(1), 28..34): extra ranges specified
| error for (FileId(1), 36..40): extra ranges after
| note for (FileId(1), 28..34): this must be the only range present
| info: any-sized arrays must have this range be the only range present

